--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,5 +17,6 @@
     <link rel="stylesheet" href="/assets/css/prism.css">
     <link rel="stylesheet" href="/assets/css/share.min.css">
     <link rel="stylesheet" href="/assets/css/app.min.css">
+    <link rel="icon" href="/favicon.png" mce_href="/favicon.png" type="image/png" />
     <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
 </head>
