--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,4 +10,7 @@
             {% endfor %}
         </ul>
     </nav>
+    <a href="http://www.reactivemanifesto.org/"> 
+        <img style="border: 0; position: fixed; left: 0; top:0; z-index: 9000" src="//d379ifj7s9wntv.cloudfront.net/reactivemanifesto/images/ribbons/we-are-reactive-black-left.png"> 
+    </a>
 </header>
