--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@
   <input id="nm-switch" type="hidden" value="{{ site.nightMode }}"> {% include header.html %}
 
   <header
-    class="g-banner post-header {{ site.postPatterns | prepend: 'post-pattern-' }} {{ site.theme-color | prepend: 'bgcolor-' }} {% unless page.cover %}post-no-cover{% endunless %}"
+    class="g-banner post-header {{ site.postPatterns | prepend: 'post-pattern-' }} {{ site.bg-color | prepend: 'bgcolor-' }} {% unless page.cover %}post-no-cover{% endunless %}"
     data-theme="{{ site.theme-color }}"
   >
     <div class="post-wrapper">
